[package]
name = "hf-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
fs2 = "0.4.3"
futures = "0.3.28"
rand = "0.8.5"
reqwest = "0.11.18"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["fs"] }

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["macros"] }
